--- a/ProjectDiamondShop/Content/Diamonds/ViewDiamond.css
+++ b/ProjectDiamondShop/Content/Diamonds/ViewDiamond.css
@@ -167,10 +167,28 @@ button.thumbnail-button-cert {
 }
 
 .video-frame {
-	width: 100%;
-	height: 300px;
-	margin-top: 50px;
+	border-radius: 15px; /* Thay đổi giá trị 15px nếu bạn muốn bo góc nhiều hơn hoặc ít hơn */
+	overflow: hidden; /* Đảm bảo nội dung bên trong cũng được bo góc */
 }
+
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	height: 0;
+	overflow: hidden;
+	max-width: 100%;
+	background: #333;
+	border-radius: 15px;
+}
+
+	.video-container iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border-radius: 15px; /* Bo góc video */
+	}
 
 .additional-info {
 	margin-top: 40px;
