--- a/ProjectDiamondShop/Content/ViewOrder.css
+++ b/ProjectDiamondShop/Content/ViewOrder.css
@@ -70,3 +70,14 @@
 	.section.active {
 		display: block;
 	}
+
+.pagination-container {
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
+}
+
+.pagination .active .page-link {
+	background-color: #007bff;
+	color: white;
+}
