--- a/ProjectDiamondShop/Views/Account/AccountPage.cshtml
+++ b/ProjectDiamondShop/Views/Account/AccountPage.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Account Page";
+    bool showSignUpForm = ViewBag.ShowSignUpForm ?? false;
 }
 
 <!DOCTYPE html>
@@ -37,7 +38,7 @@
                         <a class="nav-link" href="@Url.Action("About", "Home")">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.facebook.com/profile.php?id=61561345894731" target="_blank">Contact Us</a>
+                        <a class="nav-link" href="@Url.Action("Contact", "Home")">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Index", "Diamonds")">Shop</a>
@@ -74,8 +75,8 @@
         </div>
     </nav>
 
-    <div class="container" id="container">
-        <div class="form-container sign-up">
+    <div class="container @(showSignUpForm ? "active" : "")" id="container">
+        <div class="form-container sign-up @(showSignUpForm ? "active" : "")">
             <form id="form2" method="post" action="@Url.Action("Register", "Account")">
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -83,28 +84,33 @@
                 <div class="form-group">
                     <label for="txtUname">User Name:</label>
                     <input type="text" id="txtUname" name="txtUname" class="form-control" placeholder="Enter Your User Name" value="@ViewBag.UserName" required style="width: 112%" />
+                    @Html.ValidationMessage("txtUname", "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group password-container">
                     <label for="txtPass">Password:</label>
                     <input type="password" id="txtPass" name="txtPass" class="form-control" placeholder="Enter Your Password" required style="width: 112%" />
                     <span class="fa fa-eye show-password-toggle" onclick="togglePasswordVisibility('txtPass')"></span>
+                    @Html.ValidationMessage("txtPass", "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group password-container">
                     <label for="txtCPass">Confirm Password:</label>
                     <input type="password" id="txtCPass" name="txtCPass" class="form-control" placeholder="Enter Your Confirm Password" required style="width: 112%" />
                     <span class="fa fa-eye show-password-toggle" onclick="togglePasswordVisibility('txtCPass')"></span>
+                    @Html.ValidationMessage("txtCPass", "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
                     <label for="txtName">Your Full Name:</label>
                     <input type="text" id="txtName" name="txtName" class="form-control" placeholder="Enter Your Name" value="@ViewBag.FullName" required style="width: 112%" />
+                    @Html.ValidationMessage("txtName", "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
                     <label for="txtEmail">Email:</label>
                     <input type="email" id="txtEmail" name="txtEmail" class="form-control" placeholder="Enter Your Email" value="@ViewBag.Email" required style="width: 112%" />
+                    @Html.ValidationMessage("txtEmail", "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
@@ -112,7 +118,7 @@
                 </div>
             </form>
         </div>
-        <div class="form-container sign-in">
+        <div class="form-container sign-in @(showSignUpForm ? "" : "active")">
             <form id="form1" runat="server" method="post" action="@Url.Action("Login", "Account")">
                 @Html.AntiForgeryToken()
 
@@ -126,11 +132,13 @@
                 <div class="form-group">
                     <label for="username" style="font-family:'Times New Roman', Times, serif">User Name:</label>
                     <input type="text" class="form-control" id="username" name="username" value="@ViewBag.UserName" placeholder="Enter Your User Name" required style="width: 112%">
+                    @Html.ValidationMessage("username", "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group password-container">
                     <label for="password" style="font-family:'Times New Roman', Times, serif">Password:</label>
                     <input type="password" class="form-control" id="password" name="password" value="@ViewBag.Password" placeholder="Enter Your Password" required style="width: 112%">
                     <span class="fa fa-eye show-password-toggle" onclick="togglePasswordVisibility('password')"></span>
+                    @Html.ValidationMessage("password", "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
                     <input type="submit" id="btnLogin" class="btn btn-success" value="Login" />
@@ -223,6 +231,13 @@
                     $('.navbar').css('background', 'transparent');
                 }
             });
+
+            // Set the form to show based on ViewBag
+            if (@(showSignUpForm ? "true" : "false")) {
+                container.classList.add("active");
+            } else {
+                container.classList.remove("active");
+            }
         });
 
         $('.close').click(function () {
